deployment.yaml
# Postgres external name
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  type: ExternalName
  externalName: containers-us-west-88.railway.app
---
# Application
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-app-server-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: finance-app-server-node
  template:
    metadata:
      labels:
        app: finance-app-server-node
    spec:
      containers:
        - name: finance-app-server-node-container
          image: docker.io/viictrp/finance-app-server-node:latest
          ports:
            - containerPort: 8080
---
# Application service
apiVersion: v1
kind: Service
metadata:
  name: finance-app-server-node
spec:
  selector:
    app: finance-app-server-node
  ports:
    - name: http
      port: 8080
  type: ClusterIP
